use toList() directly on Stream